--- a/HarmonogramSzkolny/Views/Shared/_Layout.cshtml
+++ b/HarmonogramSzkolny/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                     <li>@Html.ActionLink("Wszystkie", "All", "Home")</li>
                     <li>@Html.ActionLink("Dziś", "Today", "Home")</li>
                     <li>@Html.ActionLink("Jutro", "Tomorrow", "Home")</li>
-                    <li>@Html.ActionLink("Minimum", "AllMobile", "Home")</li>                   
+                    <li>@Html.ActionLink("Minimum", "AllMobile", "Home")</li>
+                    <li>@Html.ActionLink("Wszystkie od początku", "All", "Home", new { all=true}, null)</li>
+                    
+
                 </ul>
             </div>
         </div>
