--- a/HarmonogramSzkolny/Views/Shared/_Layout.cshtml
+++ b/HarmonogramSzkolny/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("Jutro", "Tomorrow", "Home")</li>
                     <li>@Html.ActionLink("Minimum", "AllMobile", "Home")</li>
                     <li>@Html.ActionLink("Wszystkie od początku", "All", "Home", new { all=true}, null)</li>
-                    
+                    <li>@Html.ActionLink("Mapa", "Map", "Home")</li>
 
                 </ul>
             </div>
